Java Code/Subfunction Algorithm/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_04\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-source
1.7
-noindex
-notree
-nohelp
-nonavbar
-d
C:\Users\Gavin\Desktop\Code\doc
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit.jar;C:\Users\Gavin\Documents\squintV2.12.jar;C:\Users\Gavin\Documents\Jama-1.0.2.jar;C:\Users\Gavin\Documents\TOCtools.jar;C:\Users\Gavin\Desktop\Code
C:\Users\Gavin\Desktop\Code\Algorithm.java
<---- end of javadoc command ---->
Loading source file C:\Users\Gavin\Desktop\Code\Algorithm.java...
Constructing Javadoc information...
C:\Users\Gavin\Desktop\Code\Algorithm.java:119: error: method main(String[]) is already defined in class Algorithm
    public static void main( String[] args )
                       ^
Standard Doclet version 1.7.0_04
Building tree for all the packages and classes...
Generating C:\Users\Gavin\Desktop\Code\doc\Algorithm.html...
Generating C:\Users\Gavin\Desktop\Code\doc\package-frame.html...
Generating C:\Users\Gavin\Desktop\Code\doc\package-summary.html...
Generating C:\Users\Gavin\Desktop\Code\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Gavin\Desktop\Code\doc\allclasses-frame.html...
Generating C:\Users\Gavin\Desktop\Code\doc\allclasses-noframe.html...
Generating C:\Users\Gavin\Desktop\Code\doc\index.html...
1 warning
